css: prevent whitespace above or under the background on scrolling

--- a/main.css
+++ b/main.css
@@ -1,7 +1,14 @@
+html {
+  overflow: hidden;
+  height: 100%;
+}
+
 body {
   padding: 10px;
   font: 400 100%/1.5 'Cormorant Garamond', sans-serif;
   color: #F8F8FF;
+  height: 100%;
+  overflow: auto;
 }
 
 a {
